# college_projects

./: .gitmodules  README.md
assembly_programming/: README.md
assembly_programming/contamination/: Makefile  contamination.s  example_in.txt  main.c
assembly_programming/gray/: Makefile  gray.s  main.c
assembly_programming/heat/: 3x4_matrix.txt  Makefile  heat.asm  main.c
computer_networks/: README.md
computer_networks/screenworms/: CMakeLists.txt  Makefile  README.md
computer_networks/screenworms/client/: client_main.cpp
computer_networks/screenworms/common/: timer_poll.cpp  timer_poll.h  utility.cpp  utility.h
computer_networks/screenworms/server/: game.cpp  game.h  game_server.cpp  game_server.h  game_types.cpp  game_types.h  server_main.cpp
concurrent_programming/: README.md
concurrent_programming/actors_system/: .gitignore  CMakeLists.txt  README.md  cacti.c  err.c  err.h  macierz.c  silnia.c
concurrent_programming/multithreaded_page_rank/: .gitignore
concurrent_programming/transaction_manager/: .gitignore
individual_programming_project/Forests/: .gitmodules  BeingTree.c  BeingTree.h  CMakeLists.txt  README.md  String.c  String.h  World.c  World.h  main.c  makefile  test.sh  userInterface.c  userInterface.h
jnp3-haskell/: README.md
jnp3-haskell/sokoban/: sokoban.hs
jnp3-haskell/supply/: supply.hs
object_oriented_programming/Set-cover/: README.md  example.in  example.out
object_oriented_programming/elections/: README.md
operating_systems/: README.md
software_engineering/: README.md
web_applications/: README.md
(+102 files in other folders)
